Replace .input-group-addon with .input-group-prepend (BS4 beta 3).

--- a/babybuddy/templates/registration/login.html
+++ b/babybuddy/templates/registration/login.html
@@ -12,8 +12,8 @@
             {{ form.username.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-addon">
-                <i class="icon icon-user" aria-hidden="true"></i>
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="icon icon-user" aria-hidden="true"></i></span>
             </div>
             {% render_field form.username name='username' class+='form-control' id='username-input-group' placeholder=form.username.label %}
         </div>
@@ -22,8 +22,8 @@
             {{ form.password.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-addon">
-                <i class="icon icon-lock" aria-hidden="true"></i>
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="icon icon-lock" aria-hidden="true"></i></span>
             </div>
             {% render_field form.password name='password' class+='form-control' id='password-input-group' placeholder=form.password.label %}
         </div>
