--- a/babybuddy/templates/registration/password_reset_confirm.html
+++ b/babybuddy/templates/registration/password_reset_confirm.html
@@ -22,8 +22,8 @@
             {{ form.new_password1.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-addon">
-                <i class="icon icon-lock" aria-hidden="true"></i>
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="icon icon-lock" aria-hidden="true"></i></span>
             </div>
             {% render_field form.new_password1 name='new_password1' class+='form-control' id='password1-input-group' %}
         </div>
@@ -33,8 +33,8 @@
             {{ form.new_password2.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-addon">
-                <i class="icon icon-lock" aria-hidden="true"></i>
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="icon icon-lock" aria-hidden="true"></i></span>
             </div>
             {% render_field form.new_password2 name='new_password2' class+='form-control' id='password2-input-group' %}
         </div>
