--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -20,8 +20,8 @@
     {% elif field|field_type == "datetimefield" or field|field_type == "datefield" %}
         <div class="form-group">
             <div class="input-group date" id="datetimepicker_{{ field.name }}" data-target-input="nearest">
-                <div class="input-group-addon" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
-                    <i class="fa fa-calendar"></i>
+                <div class="input-group-prepend" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
+                    <span class="input-group-text"><i class="fa fa-calendar"></i></span>
                 </div>
                 {% if field.errors %}
                     {{ field|add_class:"form-control is-invalid" }}
