--- a/babybuddy/templates/registration/password_reset_form.html
+++ b/babybuddy/templates/registration/password_reset_form.html
@@ -17,8 +17,8 @@
             {{ form.email.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-addon">
-                <i class="icon icon-envelope" aria-hidden="true"></i>
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="icon icon-envelope" aria-hidden="true"></i></span>
             </div>
             {% render_field form.email name='email' class+='form-control' id='email-input-group' placeholder=form.email.label %}
         </div>
