Remove strong from Diaper Changes types card solid figure.

--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -21,7 +21,7 @@
                     <div class="progress-bar bg-secondary lead"
                          role="progressbar"
                          style="width: {{ info.solid_pct }}%;">
-                        <strong>{{ info.solid|floatformat:'0' }}</strong>&nbsp;solid</div>
+                        {{ info.solid|floatformat:'0' }}&nbsp;solid</div>
                 {% endif %}
             </div>
             <div class="text-center text-light small">
