Lessen hover effect on checkbox buttons.

--- a/babybuddy/static_src/scss/_global.scss
+++ b/babybuddy/static_src/scss/_global.scss
@@ -20,3 +20,10 @@
 .invalid-feedback {
     display: block;
 }
+
+// Disable hover effect on buttons (used for checkbox buttons).
+.btn-no-hover:hover {
+    color: inherit;
+    background-color: inherit;
+    border-color: inherit;
+}
