--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -8,7 +8,7 @@
 <div class="col-sm-10">
     {% if field|field_type == "booleanfield" %}
         <div class="btn-group-toggle" data-toggle="buttons">
-            <label for="id_{{ field.name }}" class="btn btn-outline-light{% if field.value %} active{% endif %}">
+            <label for="id_{{ field.name }}" class="btn btn-outline-light btn-no-hover{% if field.value %} active{% endif %}">
                 {% if field.errors %}
                     {{ field|add_class:"is-invalid" }}
                 {% else %}
