Remove ounces references for feeding amounts.

--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -32,7 +32,7 @@
                         <td>{{ feeding.type }}</td>
                         <td>
                             {% if feeding.amount %}
-                                {{ feeding.amount }} oz.
+                                {{ feeding.amount }}
                             {% endif %}
                         </td>
                         <td>{{ feeding.duration|duration_string }}</td>
