--- a/dashboard/templates/cards/feeding_last.html
+++ b/dashboard/templates/cards/feeding_last.html
@@ -14,7 +14,7 @@
     {% if feeding %}
         {{ feeding.type }}, {{ feeding.method }}
         {% if feeding.amount %}
-            , {{ feeding.amount }}oz.
+            ({{ feeding.amount }})
         {% endif %}
     {% endif %}
 {% endblock %}
