Replace Page Visibility API with focus event listener for dashboard refreshes.
This is a bit of a testing phase to see if the focus event listerner behaves any better than the Page Visibility API, particularly in mobile browsers.

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -35,5 +35,9 @@
         <script type="application/javascript">
             BabyBuddy.Dashboard.watch('dashboard-child', {{ user.settings.dashboard_refresh_rate_milliseconds }});
         </script>
+    {% else %}
+        <script type="application/javascript">
+            BabyBuddy.Dashboard.watch('dashboard-child', false);
+        </script>
     {% endif %}
 {% endblock %}
