--- a/babybuddy/templates/registration/base.html
+++ b/babybuddy/templates/registration/base.html
@@ -9,6 +9,7 @@
             <h1 class="display-3 mb-3"><span class="text-info">Baby</span> Buddy</h1>
         </div>
         <div class="bg-light p-4 rounded text-dark">
+            {% include 'babybuddy/messages.html' %}
             {% block content %}{% endblock %}
         </div>
     </div>
