Use logo for favicon.

--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -14,8 +14,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static "babybuddy/root/apple-touch-icon.png" %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static "babybuddy/root/favicon-32x32.png" %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "babybuddy/root/favicon-16x16.png" %}">
-    <link rel="manifest" href="{% static "babybuddy/root/manifest.json" %}">
-    <link rel="mask-icon" href="{% static "babybuddy/root/safari-pinned-tab.svg" %}" color="#5bbad5">
+    <link rel="manifest" href="{% static "babybuddy/root/site.webmanifest" %}">
+    <link rel="mask-icon" href="{% static "babybuddy/root/safari-pinned-tab.svg" %}" color="#226f97">
+    <meta name="apple-mobile-web-app-title" content="Baby Buddy">
+    <meta name="application-name" content="Baby Buddy">
+    <meta name="msapplication-TileColor" content="#226f97">
     <meta name="theme-color" content="#ffffff">
 </head>
 <body style="padding-top: 3rem;">
