Update report graph output processing for new Plot.ly data output.

--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -25,4 +25,6 @@
 
 {% block javascript %}
     <script src="{% static "babybuddy/js/graph.js" %}"></script>
+    {{ js_graph|safe }}
+    {{ js_listener|safe }}
 {% endblock %}
