--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load i18n static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,7 +31,7 @@
 {% block breadcrumb_nav %}
     <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item"><a href="/">{% trans "Home" %}</a></li>
             {% block breadcrumbs %}{% endblock %}
         </ol>
     </nav>
