--- a/babybuddy/templates/babybuddy/user_list.html
+++ b/babybuddy/templates/babybuddy/user_list.html
@@ -1,10 +1,10 @@
 {% extends 'babybuddy/page.html' %}
-{% load bootstrap widget_tweaks %}
+{% load bootstrap i18n widget_tweaks %}
 
-{% block title %}Users{% endblock %}
+{% block title %}{% trans "Users" %}{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item active" aria-current="page">Users</li>
+    <li class="breadcrumb-item active" aria-current="page">{% trans "Users" %}</li>
 {% endblock %}
 
 {% block content %}
@@ -14,13 +14,13 @@
         <table class="table table-striped table-hover user-list">
             <thead class="thead-inverse">
                 <tr>
-                    <th>User</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Staff</th>
-                    <th>Active</th>
-                    <th class="text-center">Actions</th>
+                    <th>{% trans "User" %}</th>
+                    <th>{% trans "First Name" %}</th>
+                    <th>{% trans "Last Name" %}</th>
+                    <th>{% trans "Email" %}</th>
+                    <th>{% trans "Staff" %}</th>
+                    <th>{% trans "Active" %}</th>
+                    <th class="text-center">{% trans "Actions" %}</th>
                 </tr>
             </thead>
             <tbody>
@@ -52,7 +52,7 @@
                     </tr>
                 {% empty %}
                     <tr>
-                        <th colspan="4">No users found.</th>
+                        <th colspan="4">{% trans "No users found." %}</th>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -62,7 +62,7 @@
 
     {% if perms.admin.add_user %}
         <a href="{% url 'babybuddy:user-add' %}" class="btn btn-sm btn-success">
-            <i class="icon icon-add" aria-hidden="true"></i> Create User
+            <i class="icon icon-add" aria-hidden="true"></i> {% trans "Create User" %}
         </a>
     {% endif %}
 
