--- a/babybuddy/templates/registration/password_reset_confirm.html
+++ b/babybuddy/templates/registration/password_reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends "registration/base.html" %}
-{% load static widget_tweaks %}
+{% load i18n static widget_tweaks %}
 
-{% block title %}Password Reset{% endblock %}
+{% block title %}{% trans "Password Reset" %}{% endblock %}
 {% block content %}
 
     <form method="post">
@@ -9,13 +9,13 @@
 
         {% if form.errors %}
             <div class="alert alert-danger">
-                <p class="mb-0"><strong>Oh snap!</strong> The two passwords
-                    did not match. Please try again.</p>
+                {% blocktrans %}<p class="mb-0"><strong>Oh snap!</strong> The
+                two passwords did not match. Please try again.</p>{% endblocktrans %}
             </div>
         {% endif %}
 
         <div class="text-center mb-4">
-            <p class="mb-0">Enter your new password in each field below.</p>
+            <p class="mb-0">{% trans "Enter your new password in each field below." %}</p>
         </div>
 
         <label class="sr-only" for="password1-input-group">
@@ -28,7 +28,6 @@
             {% render_field form.new_password1 name='new_password1' class+='form-control' id='password1-input-group' %}
         </div>
 
-
         <label class="sr-only" for="password2-input-group">
             {{ form.new_password2.label }}
         </label>
@@ -40,7 +39,7 @@
         </div>
 
         <button class="btn btn-primary w-100 fade-in" type="submit" name="reset">
-            Reset Password
+            {% trans "Reset Password" %}
         </button>
     </form>
 
