--- a/babybuddy/templates/registration/password_reset_form.html
+++ b/babybuddy/templates/registration/password_reset_form.html
@@ -1,13 +1,13 @@
 {% extends "registration/base.html" %}
-{% load static widget_tweaks %}
+{% load i18n static widget_tweaks %}
 
-{% block title %}Forgot Password{% endblock %}
+{% block title %}{% trans "Forgot Password" %}{% endblock %}
 {% block content %}
 
     <div class="text-center mb-4">
-        <p class="mb-0">Enter your account email address in the form below. If
-        the address is valid, you will receive instructions for resetting your
-        password.</p>
+        {% blocktrans %}<p class="mb-0">Enter your account email address in the
+        form below. If the address is valid, you will receive instructions for
+        resetting your password.</p>{% endblocktrans %}
     </div>
 
     <form method="post">
@@ -24,7 +24,7 @@
         </div>
 
         <button class="btn btn-primary w-100 fade-in" type="submit" name="reset">
-            Reset Password
+            {% trans "Reset Password" %}
         </button>
     </form>
 
