--- a/babybuddy/templates/babybuddy/messages.html
+++ b/babybuddy/templates/babybuddy/messages.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 {% block messages %}
     {% if messages %}
         {% for message in messages %}
@@ -13,12 +15,12 @@
         {% if form.non_field_errors %}
             {% for error in form.non_field_errors %}
                 <div class="alert alert-danger" role="alert">
-                    <strong>Error:</strong> {{ error }}
+                    {% blocktrans %}<strong>Error:</strong> {{ error }}{% endblocktrans %}
                 </div>
             {% endfor %}
         {% elif form.errors %}
             <div class="alert alert-danger" role="alert">
-                <strong>Error:</strong> Some fields have errors. See below for details.
+                {% blocktrans %}<strong>Error:</strong> Some fields have errors. See below for details. {% endblocktrans %}
             </div>
         {% endif %}
     {% endif %}
