--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/base.html' %}
-{% load babybuddy_tags static timers %}
+{% load babybuddy_tags i18n static timers %}
 
 {% block nav %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -23,32 +23,38 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-quick-add-link">
                     {% if perms.core.add_diaperchange %}
                         <a class="dropdown-item p-2" href="{% url 'core:diaperchange-add' %}">
-                            <i class="icon icon-diaperchange" aria-hidden="true"></i> Diaper Change
+                            <i class="icon icon-diaperchange" aria-hidden="true"></i>
+                            {% trans "Diaper Change" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_feeding %}
                         <a class="dropdown-item p-2" href="{% url 'core:feeding-add' %}">
-                            <i class="icon icon-feeding" aria-hidden="true"></i> Feeding
+                            <i class="icon icon-feeding" aria-hidden="true"></i>
+                            {% trans "Feeding" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_note %}
                         <a class="dropdown-item p-2" href="{% url 'core:note-add' %}">
-                            <i class="icon icon-note" aria-hidden="true"></i> Note
+                            <i class="icon icon-note" aria-hidden="true"></i>
+                            {% trans "Note" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_sleep %}
                         <a class="dropdown-item p-2" href="{% url 'core:sleep-add' %}">
-                            <i class="icon icon-sleep" aria-hidden="true"></i> Sleep
+                            <i class="icon icon-sleep" aria-hidden="true"></i>
+                            {% trans "Sleep" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_tummytime %}
                         <a class="dropdown-item p-2" href="{% url 'core:tummytime-add' %}">
-                            <i class="icon icon-tummytime" aria-hidden="true"></i> Tummy Time
+                            <i class="icon icon-tummytime" aria-hidden="true"></i>
+                            {% trans "Tummy Time" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_weight %}
                         <a class="dropdown-item p-2" href="{% url 'core:weight-add' %}">
-                            <i class="icon icon-weight" aria-hidden="true"></i> Weight
+                            <i class="icon icon-weight" aria-hidden="true"></i>
+                            {% trans "Weight" %}
                         </a>
                     {% endif %}
                 </div>
@@ -66,7 +72,8 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item{% if request.path == '/' %} active{% endif %}">
                     <a class="nav-link" href="{% url 'dashboard:dashboard' %}">
-                        <i class="icon icon-dashboard" aria-hidden="true"></i> Dashboard
+                        <i class="icon icon-dashboard" aria-hidden="true"></i>
+                        {% trans "Dashboard" %}
                     </a>
                 </li>
 
@@ -76,40 +83,51 @@
                        href="#"
                        data-toggle="dropdown"
                        aria-haspopup="true"
-                       aria-expanded="false"><i class="icon icon-child" aria-hidden="true"></i> Children</a>
+                       aria-expanded="false"><i class="icon icon-child" aria-hidden="true"></i>
+                        {% trans "Children" %}
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="nav-children-menu-link">
 
                         {% if perms.core.view_child %}
                             <a class="dropdown-item{% if request.path == '/children/' %} active{% endif %}"
                                href="{% url 'core:child-list' %}">
-                                <i class="icon icon-child" aria-hidden="true"></i> Children
+                                <i class="icon icon-child" aria-hidden="true"></i>
+                                {% trans "Children" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_child %}
                             <a class="dropdown-item pl-5{% if request.path == '/children/add/' %} active{% endif %}"
-                               href="{% url 'core:child-add' %}"><i class="icon icon-add" aria-hidden="true"></i> Child</a>
+                               href="{% url 'core:child-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                                {% trans "Child" %}
+                            </a>
                         {% endif %}
 
                         {% if perms.core.view_note %}
                             <a class="dropdown-item{% if request.path == '/notes/' %} active{% endif %}"
                                href="{% url 'core:note-list' %}">
-                                <i class="icon icon-note" aria-hidden="true"></i> Notes
+                                <i class="icon icon-note" aria-hidden="true"></i>
+                                {% trans "Notes" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_note %}
                             <a class="dropdown-item pl-5{% if request.path == '/notes/add/' %} active{% endif %}"
-                               href="{% url 'core:note-add' %}"><i class="icon icon-add" aria-hidden="true"></i> Note</a>
+                               href="{% url 'core:note-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                                {% trans "Note" %}
+                            </a>
                         {% endif %}
 
                         {% if perms.core.view_weight %}
                             <a class="dropdown-item{% if request.path == '/weight/' %} active{% endif %}"
                                href="{% url 'core:weight-list' %}">
-                                <i class="icon icon-weight" aria-hidden="true"></i> Weight
+                                <i class="icon icon-weight" aria-hidden="true"></i>
+                                {% trans "Weight" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_weight %}
                             <a class="dropdown-item pl-5{% if request.path == '/weight/add/' %} active{% endif %}"
-                               href="{% url 'core:weight-add' %}"><i class="icon icon-add" aria-hidden="true"></i> Weight entry</a>
+                               href="{% url 'core:weight-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                                {% trans "Weight entry" %}
+                            </a>
                         {% endif %}
 
                     </div>
@@ -121,43 +139,61 @@
                        href="#"
                        data-toggle="dropdown"
                        aria-haspopup="true"
-                       aria-expanded="false"><i class="icon icon-activities" aria-hidden="true"></i> Activities</a>
+                       aria-expanded="false"><i class="icon icon-activities" aria-hidden="true"></i>
+                        {% trans "Activities" %}
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="nav-activity-menu-link">
 
                         {% if perms.core.view_diaperchange %}
                             <a class="dropdown-item{% if request.path == '/changes/' %} active{% endif %}"
-                               href="{% url 'core:diaperchange-list' %}"><i class="icon icon-diaperchange" aria-hidden="true"></i> Changes</a>
+                               href="{% url 'core:diaperchange-list' %}"><i class="icon icon-diaperchange" aria-hidden="true"></i>
+                                {% trans "Changes" %}
+                            </a>
                         {% endif %}
                         {% if perms.core.add_diaperchange %}
                             <a class="dropdown-item pl-5{% if request.path == '/changes/add/' %} active{% endif %}"
-                               href="{% url 'core:diaperchange-add' %}"><i class="icon icon-add" aria-hidden="true"></i> Change</a>
+                               href="{% url 'core:diaperchange-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                                {% trans "Change" %}
+                            </a>
                         {% endif %}
 
                         {% if perms.core.view_feeding %}
                             <a class="dropdown-item{% if request.path == '/feedings/' %} active{% endif %}"
-                               href="{% url 'core:feeding-list' %}"><i class="icon icon-feeding" aria-hidden="true"></i> Feedings</a>
+                               href="{% url 'core:feeding-list' %}"><i class="icon icon-feeding" aria-hidden="true"></i>
+                                {% trans "Feedings" %}
+                            </a>
                         {% endif %}
                         {% if perms.core.add_diaperchange %}
                             <a class="dropdown-item pl-5{% if request.path == '/feedings/add/' %} active{% endif %}"
-                               href="{% url 'core:feeding-add' %}"><i class="icon icon-add" aria-hidden="true"></i> Feeding</a>
+                               href="{% url 'core:feeding-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                                {% trans "Feeding" %}
+                            </a>
                         {% endif %}
 
                         {% if perms.core.view_sleep %}
                             <a class="dropdown-item{% if request.path == '/sleep/' %} active{% endif %}"
-                               href="{% url 'core:sleep-list' %}"><i class="icon icon-sleep" aria-hidden="true"></i> Sleep</a>
+                               href="{% url 'core:sleep-list' %}"><i class="icon icon-sleep" aria-hidden="true"></i>
+                                {% trans "Sleep" %}
+                            </a>
                         {% endif %}
                         {% if perms.core.add_sleep %}
                             <a class="dropdown-item pl-5{% if request.path == '/sleep/add/' %} active{% endif %}"
-                               href="{% url 'core:sleep-add' %}"><i class="icon icon-add" aria-hidden="true"></i> Sleep entry</a>
+                               href="{% url 'core:sleep-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                                {% trans "Sleep entry" %}
+                            </a>
                         {% endif %}
 
                         {% if perms.core.view_tummytime %}
                             <a class="dropdown-item{% if request.path == '/tummy-time/' %} active{% endif %}"
-                               href="{% url 'core:tummytime-list' %}"><i class="icon icon-tummytime" aria-hidden="true"></i> Tummy Time</a>
+                               href="{% url 'core:tummytime-list' %}"><i class="icon icon-tummytime" aria-hidden="true"></i>
+                                {% trans "Tummy Time" %}
+                            </a>
                         {% endif %}
                         {% if perms.core.add_tummytime %}
                             <a class="dropdown-item pl-5{% if request.path == '/tummy-time/add/' %} active{% endif %}"
-                               href="{% url 'core:tummytime-add' %}"><i class="icon icon-add" aria-hidden="true"></i> Tummy Time entry</a>
+                               href="{% url 'core:tummytime-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                                {% trans "Tummy Time entry" %}
+                            </a>
                         {% endif %}
 
                     </div>
@@ -179,29 +215,29 @@
                            aria-expanded="false"><i class="icon icon-user" aria-hidden="true"></i> {{ request.user }}
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-user-menu-link">
-                            <h6 class="dropdown-header">User</h6>
-                            <a href="{% url 'babybuddy:user-settings' %}" class="dropdown-item">Settings</a>
-                            <a href="{% url 'babybuddy:user-password' %}" class="dropdown-item">Password</a>
-                            <a href="{% url 'babybuddy:logout' %}" class="dropdown-item">Logout</a>
-                            <h6 class="dropdown-header">Site</h6>
+                            <h6 class="dropdown-header">{% trans "User" %}</h6>
+                            <a href="{% url 'babybuddy:user-settings' %}" class="dropdown-item">{% trans "Settings" %}</a>
+                            <a href="{% url 'babybuddy:user-password' %}" class="dropdown-item">{% trans "Password" %}</a>
+                            <a href="{% url 'babybuddy:logout' %}" class="dropdown-item">{% trans "Logout" %}</a>
+                            <h6 class="dropdown-header">{% trans "Site" %}</h6>
                             <a href="{% url 'api:api-root' %}"
                                class="dropdown-item"
-                               target="_blank">API Browser</a>
+                               target="_blank">{% trans "API Browser" %}</a>
                             {% if request.user.is_staff %}
-                                <a href="{% url 'babybuddy:user-list' %}" class="dropdown-item">Users</a>
+                                <a href="{% url 'babybuddy:user-list' %}" class="dropdown-item">{% trans "Users" %}</a>
                                 <a href="{% url 'admin:index' %}"
                                    class="dropdown-item"
-                                   target="_blank">Backend Admin</a>
+                                   target="_blank">{% trans "Backend Admin" %}</a>
                             {% endif %}
-                            <h6 class="dropdown-header">Support</h6>
+                            <h6 class="dropdown-header">{% trans "Support" %}</h6>
                             <a href="https://github.com/cdubz/babybuddy"
                                class="dropdown-item"
                                target="_blank">
-                                <i class="icon icon-source" aria-hidden="true"></i> Source Code</a>
+                                <i class="icon icon-source" aria-hidden="true"></i> {% trans "Source Code" %}</a>
                             <a href="https://gitter.im/babybuddy/Lobby"
                                class="dropdown-item"
                                target="_blank">
-                                <i class="icon icon-chat" aria-hidden="true"></i> Chat / Support</a>
+                                <i class="icon icon-chat" aria-hidden="true"></i> {% trans "Chat / Support" %}</a>
                             <h6 class="dropdown-header">v{% version_string %}</h6>
                         </div>
                     </li>
