--- a/babybuddy/templates/babybuddy/paginator.html
+++ b/babybuddy/templates/babybuddy/paginator.html
@@ -1,4 +1,4 @@
-{% load babybuddy_tags %}
+{% load i18n babybuddy_tags %}
 
 {% if is_paginated %}
     <nav aria-label="Page navigation">
@@ -8,7 +8,7 @@
                 <li class="page-item">
                     <a class="page-link" href="{% relative_url 'page' page_obj.previous_page_number %}" aria-label="Previous">
                         <i class="icon icon-chevron-left" aria-hidden="true"></i>
-                        <span class="sr-only">Previous</span>
+                        <span class="sr-only">{% trans "Previous" %}</span>
                     </a>
                 </li>
             {% endif %}
@@ -25,7 +25,7 @@
                 <li class="page-item">
                     <a class="page-link" href="{% relative_url 'page' page_obj.next_page_number %}" aria-label="Next">
                         <i class="icon icon-chevron-right" aria-hidden="true"></i>
-                        <span class="sr-only">Next</span>
+                        <span class="sr-only">{% trans "Next" %}</span>
                     </a>
                 </li>
             {% endif %}
