--- a/babybuddy/templates/babybuddy/user_form.html
+++ b/babybuddy/templates/babybuddy/user_form.html
@@ -1,28 +1,29 @@
 {% extends 'babybuddy/page.html' %}
+{% load i18n %}
 
 {% block title %}
     {% if object %}
         {{ object }}
     {% else %}
-        Create User
+        {% trans "Create User" %}
     {% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'babybuddy:user-list' %}">Users</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'babybuddy:user-list' %}">{% trans "Users" %}</a></li>
     {% if object %}
         <li class="breadcrumb-item font-weight-bold">{{ object }}</li>
-        <li class="breadcrumb-item active" aria-current="page">Update</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Update" %}</li>
     {% else %}
-        <li class="breadcrumb-item active" aria-current="page">Create User</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Create User" %}</li>
     {% endif %}
 {% endblock %}
 
 {% block content %}
     {% if object %}
-        <h1>Update <span class="text-info">{{ object }}</span></h1>
+        {% blocktrans %}<h1>Update <span class="text-info">{{ object }}</span></h1>{% endblocktrans %}
     {% else %}
-        <h1>Create User</h1>
+        <h1>{% trans "Create User" %}</h1>
     {% endif %}
     {% include 'babybuddy/form.html' %}
 {% endblock %}
