--- a/babybuddy/templates/babybuddy/user_password_form.html
+++ b/babybuddy/templates/babybuddy/user_password_form.html
@@ -1,14 +1,14 @@
 {% extends 'babybuddy/page.html' %}
-{% load widget_tweaks %}
+{% load i18n widget_tweaks %}
 
-{% block title %}Change Password{% endblock %}
+{% block title %}{% trans "Change Password" %}{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item">User</li>
-    <li class="breadcrumb-item active">Change Password</li>
+    <li class="breadcrumb-item">{% trans "User" %}</li>
+    <li class="breadcrumb-item active">{% trans "Change Password" %}</li>
 {% endblock %}
 
 {% block content %}
-    <h1>Change Password</h1>
+    <h1>{% trans "Change Password" %}</h1>
     {% include 'babybuddy/form.html' %}
 {% endblock %}
