--- a/babybuddy/templates/babybuddy/welcome.html
+++ b/babybuddy/templates/babybuddy/welcome.html
@@ -1,18 +1,18 @@
 {% extends 'babybuddy/page.html' %}
-{% load widget_tweaks %}
+{% load i18n widget_tweaks %}
 
-{% block title %}Welcome!{% endblock %}
+{% block title %}{% trans "Welcome!" %}{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item active" aria-current="page">Welcome!</li>
+    <li class="breadcrumb-item active" aria-current="page">{% trans "Welcome!" %}</li>
 {% endblock %}
 
 {% block content %}
     <div class="jumbotron">
-        <h1 class="display-3">Welcome to Baby Buddy!</h1>
+        <h1 class="display-3">{% trans "Welcome to Baby Buddy!" %}</h1>
         <p class="lead">
-            Learn about and predict baby's needs without (<em>as much</em>)
-            guess work by using Baby Buddy to track &mdash;
+            {% blocktrans %}Learn about and predict baby's needs without
+            (<em>as much</em>) guess work by using Baby Buddy to track &mdash;{% endblocktrans %}
         </p>
         <hr class="my-4">
         <div class="card-deck">
@@ -21,7 +21,7 @@
                     <i class="icon icon-2x icon-diaperchange" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title text-center">Diaper Changes</h3>
+                    <h3 class="card-title text-center">{% trans "Diaper Changes" %}</h3>
                 </div>
             </div>
             <div class="card card-feeding">
@@ -29,7 +29,7 @@
                     <i class="icon icon-2x icon-feeding" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title text-center">Feedings</h3>
+                    <h3 class="card-title text-center">{% trans "Feedings" %}</h3>
                 </div>
             </div>
             <div class="card card-sleep">
@@ -37,7 +37,7 @@
                     <i class="icon icon-2x icon-sleep" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title text-center">Sleep</h3>
+                    <h3 class="card-title text-center">{% trans "Sleep" %}</h3>
                 </div>
             </div>
             <div class="card card-tummytime">
@@ -45,23 +45,23 @@
                     <i class="icon icon-2x icon-tummytime" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title text-center">Tummy Time</h3>
+                    <h3 class="card-title text-center">{% trans "Tummy Time" %}</h3>
                 </div>
             </div>
         </div>
         <hr class="my-4">
         <p class="lead">
-            As the amount of entries grows, Baby Buddy will help
+            {% blocktrans %}As the amount of entries grows, Baby Buddy will help
             parents and caregivers to identify small patterns in baby's habits
             using the dashboard and graphs. Baby Buddy is mobile-friendly and
             uses a dark theme to help weary moms and dads with 2AM feedings and
             changings. To get started, just click the button below to add your
-            first (or second, third, etc.) child!
+            first (or second, third, etc.) child!{% endblocktrans %}
         </p>
         <p class="text-center">
             {% if perms.core.add_child %}
                 <a href="{% url 'core:child-add' %}" class="btn btn-lg btn-success">
-                    <i class="icon icon-child" aria-hidden="true"></i> Add a Child
+                    <i class="icon icon-child" aria-hidden="true"></i> {% trans "Add a Child" %}
                 </a>
             {% endif %}
         </p>
