--- a/babybuddy/templates/registration/password_reset_complete.html
+++ b/babybuddy/templates/registration/password_reset_complete.html
@@ -1,11 +1,12 @@
 {% extends "registration/base.html" %}
+{% load i18n %}
 
-{% block title %}Password Reset Successfully!{% endblock %}
+{% block title %}{% trans "Password Reset Successfully!" %}{% endblock %}
 {% block content %}
 
     <div class="text-center mb-0">
-        <p>Your password has been set. You may go ahead and log in now.</p>
-        <p class="mb-0"><a href="{{ login_url }}">Log in</a></p>
+        <p>{% trans "Your password has been set. You may go ahead and log in now." %}</p>
+        <p class="mb-0"><a href="{{ login_url }}">{% trans "Log in" %}</a></p>
     </div>
 
 {% endblock %}
