--- a/babybuddy/templates/registration/password_reset_done.html
+++ b/babybuddy/templates/registration/password_reset_done.html
@@ -1,15 +1,16 @@
 {% extends "registration/base.html" %}
+{% load i18n %}
 
-{% block title %}Reset Email Sent{% endblock %}
+{% block title %}{% trans "Reset Email Sent" %}{% endblock %}
 {% block content %}
 
     <div class="text-center mb-0">
-        <p>We've emailed you instructions for setting your
+        {% blocktrans %}<p>We've emailed you instructions for setting your
             password, if an account exists with the email you entered. You
             should receive them shortly.</p>
         <p class="mb-0">If you don't receive an email, please make sure you've
             entered the address you registered with, and check your spam
-            folder.</p>
+            folder.</p>{% endblocktrans %}
     </div>
 
 {% endblock %}
